--- a/FizzBuzz.Console/FizzBuzz.Console.csproj
+++ b/FizzBuzz.Console/FizzBuzz.Console.csproj
@@ -43,8 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IFizzBuzzGame.cs" />
+    <Compile Include="Interfaces\IFizzBuzzRule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\Constants.cs" />
+    <Compile Include="Types\FizzBuzzGame.cs" />
+    <Compile Include="Types\Rules\BuzzRule.cs" />
+    <Compile Include="Types\Rules\DefaultRule.cs" />
+    <Compile Include="Types\Rules\FizzBuzzRule.cs" />
+    <Compile Include="Types\Rules\FizzRule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
